test: implementar pruebas unitarias para CategoriaRepository y CategoriaServiceImpl usando JUnit y Mockito