@@ -12,6 +12,7 @@ import org.springframework.stereotype.Service;
 import javax.validation.Valid;
 import java.util.List;
 import java.util.NoSuchElementException;
+import java.util.stream.Collectors;
 
 @Service
 public class CategoriaServiceImpl implements CategoriaService {
@@ -30,21 +31,29 @@ public class CategoriaServiceImpl implements CategoriaService {
     @Override
     public Categoria getCategoriaById(Long id) {
         return categoriaRepository.findById(id)
-                .orElseThrow(() -> new NoSuchElementException("La categoria con id= " + id + " no exite o ha sido eliminada"));
+                .orElseThrow(() -> new NoSuchElementException("La categoria con id= " + id + " no existe o ha sido eliminada"));
     }
 
     /**
      * Obtiene todas las categorías registradas (activas e inactivas).
      * Uso común para el panel administrativo.
      *
-     * @return Lista de DTOs con nombre y descripción de las categorías
+     * @return Lista de DTOs con nombre, descripción y cantidad de packs de las categorías
      */
     @Override
     public List<CategoriaResponse> getCategorias() {
-        return categoriaRepository.findAll()
+        List<Categoria> categorias = categoriaRepository.findAll();
+        return categorias
                 .stream()
-                .map(categoria -> new CategoriaResponse(categoria.getNombre(), categoria.getDescripcion()))
-                .toList();
+                .map(categoria -> {
+                    long cantidadPacks = categoriaRepository.countPacksByCategoriaId(categoria.getCategoriaId());
+                    return new CategoriaResponse(
+                            categoria.getNombre(),
+                            categoria.getDescripcion(),
+                            cantidadPacks
+                    );
+                })
+                .collect(Collectors.toList());
     }
 
     /**
@@ -55,10 +64,18 @@ public class CategoriaServiceImpl implements CategoriaService {
      */
     @Override
     public List<CategoriaResponse> getCategoriasActivas() {
-        return categoriaRepository.findByActivoTrue()
+        List<Categoria> categoriasActivas = categoriaRepository.findByActivoTrue();
+        return categoriasActivas
                 .stream()
-                .map(categoria -> new CategoriaResponse(categoria.getNombre(), categoria.getDescripcion()))
-                .toList();
+                .map(categoria -> {
+                    long cantidadPacks = categoriaRepository.countPacksByCategoriaId(categoria.getCategoriaId());
+                    return new CategoriaResponse(
+                            categoria.getNombre(),
+                            categoria.getDescripcion(),
+                            cantidadPacks
+                    );
+                })
+                .collect(Collectors.toList());
     }
 
     /**
@@ -135,6 +152,18 @@ public class CategoriaServiceImpl implements CategoriaService {
         categoriaRepository.delete(categoria);
 
         return new GeneralResponse("Categoria eliminada exitosamente");
+    }
+
+    /**
+     * Cuenta los packs de una categoría.
+     * Este método es de uso interno para otros métodos del servicio.
+     *
+     * @param id ID de la categoría a buscar
+     * @return el total de packs de esa categoría
+     */
+    @Override
+    public long countPacksByCategoriaId(Long id) {
+        return categoriaRepository.countPacksByCategoriaId(id);
     }
 
 }
